--- a/test.html
+++ b/test.html
@@ -5,27 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <style>
-      .test {
-        width: 100%;
-      }
-      ul {
-        list-style: none;
-        background-color: red;
-        height: 90px;
-        display: flex;
-      }
-      li {
-        width: 1000px;
-      }
-      a {
-        text-decoration: none;
-        display: flex;
-        width: 50px;
-        height: 90px;
-        background-color: white;
-      }
-    </style>
+
+    <script>
+      let zazi = "";
+      const test = {
+        kill: "1",
+        death: "3",
+        zerg: { terran: "777" }
+      };
+      ({
+        zerg: { terran: zazi }
+      } = test);
+      console.log(zazi);
+    </script>
   </head>
   <body>
     <div class="test">
