--- a/test.html
+++ b/test.html
@@ -18,10 +18,10 @@
 
       test(props);
 
-      function test({ kill, death, zerg }) {
-        const { terran } = zerg;
-        return console.log(terran);
-      }
+      const test = ({ zerg }) => (
+         { terran } = zerg
+          console.log(terran);
+      )
     </script>
   </head>
   <body>
